--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -94,13 +94,13 @@
 
 <!-- 네비게이션 바 -->
 <div class="navbar">
-  <a href="#">만 개의 칵테일</a>
+  <a href="/main">만 개의 칵테일</a>
   <div>
-    <a href="#">인기 칵테일</a>
+    <a href="/popular">인기 칵테일</a>
     <a href="#">추천 칵테일</a>
-    <a href="#">칵테일 검색</a>
+    <a href="/search">칵테일 검색</a>
     <a href="user.html">
-      <img src="line.png">
+      <img src="/images/line.png">
     </a>
   </div>
 </div>
