--- a/src/main/resources/templates/user/search2.html
+++ b/src/main/resources/templates/user/search2.html
@@ -11,7 +11,7 @@
   <a href="/main">만 개의 칵테일</a>
   <div>
     <a href="/popular">인기 칵테일</a>
-    <a href="#">추천 칵테일</a>
+    <a href="/recommend">추천 칵테일</a>
     <a href="/search">칵테일 검색</a>
     <a href="user.html">
       <img src="/images/line.png">
