feat: 로그인 페이지로 이동하도록 기능 추가
main.html, search1, search2, search3 페이지에서 로그인 버튼 클릭시 로그인 페이지로 이동 구현

로그인 필요 기능 실행시 로그인이 안되어있는 경우, 로그인 필요하다는 메시지와 함께 로그인 페이지로 이동하도록 구현

--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -99,7 +99,7 @@
     <a href="/popular">인기 칵테일</a>
     <a href="/recommend">추천 칵테일</a>
     <a href="/search">칵테일 검색</a>
-    <a href="user.html">
+    <a href="/api/login">
       <img src="/images/line.png">
     </a>
   </div>
