--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -93,7 +93,7 @@
     <a href="#">인기 칵테일</a>
     <a href="#">추천 칵테일</a>
     <a href="#">칵테일 검색</a>
-    <a href="/api/login_complete">
+    <a href="/api/login">
       <img src="/images/line.png">
     </a>
   </div>
