--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -134,9 +134,6 @@
                         <i class="fas fa-user-circle"></i> 관리자
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="adminDropdown">
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-user"></i> 프로필</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="fas fa-cog"></i> 설정</a></li>
-                        <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> 로그아웃</a></li>
                     </ul>
                 </li>
@@ -151,13 +148,13 @@
     <h4 class="sidebar-heading">관리 메뉴</h4>
     <ul class="nav flex-column">
         <li class="nav-item">
-            <a class="nav-link active" href="#"><i class="fas fa-tachometer-alt"></i> 대시보드</a>
+            <a class="nav-link active" href="/admin/dashboard"><i class="fas fa-tachometer-alt"></i> 대시보드</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-user-cog"></i> 계정 관리</a>
+            <a class="nav-link" href="/admin/users"><i class="fas fa-user-cog"></i> 계정 관리</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-comments"></i> 댓글 관리</a>
+            <a class="nav-link" href="/admin/comments"><i class="fas fa-comments"></i> 댓글 관리</a>
         </li>
     </ul>
 </nav>
