feat : 버튼 링크 이동 추가

--- a/src/main/resources/templates/user/result.html
+++ b/src/main/resources/templates/user/result.html
@@ -12,10 +12,10 @@
 <div class="navbar">
   <a href="/main">만 개의 칵테일</a>
   <div>
-    <a href="/popular">인기 칵테일</a>
-    <a href="#">추천 칵테일</a>
+    <a href="/api/list">인기 칵테일</a>
+    <a href="/api/suggestion">추천 칵테일</a>
     <a href="/search">칵테일 검색</a>
-    <a href="user.html">
+    <a href="/api/login">
       <img src="/images/line.png">
     </a>
   </div>
