--- a/src/main/resources/templates/user/suggestion.html
+++ b/src/main/resources/templates/user/suggestion.html
@@ -258,13 +258,13 @@
 </head>
 <body>
 <div class="navbar">
-  <a href="#">만 개의 칵테일</a>
+  <a href="/main">만 개의 칵테일</a>
   <div>
-    <a href="#">인기 칵테일</a>
-    <a href="#">추천 칵테일</a>
-    <a href="#">칵테일 검색</a>
-    <a href="user.html">
-      <img src="line.png">
+    <a href="/api/list">인기 칵테일</a>
+    <a href="/api/suggestion/">추천 칵테일</a>
+    <a href="/search">칵테일 검색</a>
+    <a href="/api/login">
+      <img src="/images/line.png">
     </a>
   </div>
 </div>
