--- a/src/main/resources/templates/user/withdrawalPage.html
+++ b/src/main/resources/templates/user/withdrawalPage.html
@@ -92,9 +92,7 @@
     <a href="#">인기 칵테일</a>
     <a href="#">추천 칵테일</a>
     <a href="#">칵테일 검색</a>
-    <a href="#" onclick="checkLogin()">
-      <img src="/images/line.png">
-    </a>
+    <a href="#" onclick="checkLogin()" class="mypage-link">MyPage</a>
   </div>
 </div>
 
@@ -131,10 +129,10 @@
         // 서버 응답 처리
         if (response.flag === 0) {
           alert(response.message); // 삭제 성공 메시지
-          // 로그인 페이지로 이동
+
           window.location.href = "/api/withdrawalCompletePage";
         } else {
-          // 삭제 실패 시 메시지 출력
+
           alert(response.message);
           window.location.href = "/api/withdrawalPage";
         }
@@ -146,7 +144,7 @@
     });
   }
 
-  // 로그인 상태를 확인하여 mypage로 이동하거나 login으로 리디렉션
+
   function checkLogin() {
     $.ajax({
       url: '/api/login_complete',  // 로그인 상태 확인 API
@@ -154,20 +152,16 @@
       success: function(response) {
         if (response.flag === 0) {
           // 세션이 있으면 mypage로 이동
-          if (document.referrer && document.referrer !== window.location.href && !document.referrer.includes('/api/login')) {
-            window.location.href = document.referrer;
-          } else {
-            // 이전 페이지가 없거나 로그인 페이지일 경우 기본적으로 mypage로 이동
-            window.location.href = '/api/mypage';
-          }
+          window.location.href = '/api/mypage';
+
         } else {
-          alert(response.message); // "로그인해야 합니다."
-          window.location.href = '/api/login';  // 로그인 페이지로 이동
+          alert(response.message);
+          window.location.href = '/api/login';
         }
       },
       error: function(xhr, status, error) {
         alert('로그인 상태 확인 실패: ' + error);
-        window.location.href = '/api/login';  // 로그인 페이지로 리디렉션
+        window.location.href = '/api/login';
       }
     });
   }
