--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -93,15 +93,13 @@
     <a href="#">인기 칵테일</a>
     <a href="#">추천 칵테일</a>
     <a href="#">칵테일 검색</a>
-    <a href="/api/login">
-      <img src="/images/line.png">
-    </a>
+    <a href="#" onclick="checkLogin()" class="mypage-link">MyPage</a>
+    <a href="#" class="login-link" onclick="checkLogin2()">로그인</a>
   </div>
 </div>
 
 <div class="header">회원가입</div>
 
-<!-- 폼 작성 -->
 <form id="signup-form" th:action="@{/api/register_ok}" method="POST" class="container">
   <div class="sub-text">
     이름<br>
@@ -120,12 +118,11 @@
 </form>
 
 <script>
-  // 폼 제출을 비동기적으로 처리
+
   document.getElementById("signup-form").onsubmit = function(event) {
     event.preventDefault(); // 기본 제출 동작을 취소
     console.log("폼 제출 이벤트 시작");
 
-    // 폼 데이터 수집
     var formData = new FormData(document.getElementById("signup-form"));
     console.log(formData);
     // AJAX 요청
@@ -141,14 +138,55 @@
           alert(response.message);
           window.location.href = '/api/login';
         } else {
-          // 세션이 없으면 login 페이지로 이동
-          alert(response.message);  // "로그인해야 합니다."
+          alert(response.message);
           window.location.href = '/api/register';
         }
       },
       error: function(xhr, status, error) {
         alert('회원가입 상태 확인 실패: ' + error);
-        window.location.href = '/api/register';  // 로그인 페이지로 리디렉션
+        window.location.href = '/api/register';
+      }
+    });
+  }
+
+  // 로그인 상태를 확인하여 mypage로 이동하거나 login으로 리디렉션
+  function checkLogin() {
+    $.ajax({
+      url: '/api/login_complete',  // 로그인 상태 확인 API
+      type: 'POST',
+      success: function(response) {
+        if (response.flag === 0) {
+          // 세션이 있으면 mypage로 이동
+          window.location.href = '/api/mypage';
+
+        } else {
+          alert(response.message); // "로그인해야 합니다."
+          window.location.href = '/api/login';  // 로그인 페이지로 이동
+        }
+      },
+      error: function(xhr, status, error) {
+        alert('로그인 상태 확인 실패: ' + error);
+        window.location.href = '/api/login';  // 로그인 페이지로 리디렉션
+      }
+    });
+  }
+
+  function checkLogin2() {
+    $.ajax({
+      url: '/api/login_complete',  // 로그인 상태 확인 API
+      type: 'POST',
+      success: function(response) {
+        if (response.flag === 0) {
+
+          alert('로그인되어 있습니다. 마이 페이지로 이동하세요');
+        } else {
+          alert(response.message);
+          window.location.href = '/api/login';  // 로그인 페이지로 이동
+        }
+      },
+      error: function(xhr, status, error) {
+        alert('로그인 상태 확인 실패: ' + error);
+        window.location.href = '/api/login';
       }
     });
   }
