--- a/src/main/resources/templates/user/search1.html
+++ b/src/main/resources/templates/user/search1.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>칵테일 검색</title>
   <link rel="stylesheet" href="/css/search1.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <div class="navbar">
@@ -13,9 +14,9 @@
     <a href="/popular">인기 칵테일</a>
     <a href="/recommend">추천 칵테일</a>
     <a href="/search">칵테일 검색</a>
-    <a href="/api/login">
-      <img src="/images/line.png">
-    </a>
+    <a href="#" onclick="checkLogin()" class="mypage-link">MyPage</a>
+    <a href="#" class="login-link" onclick="checkLogin2()">로그인</a>
+
   </div>
 </div>
 
@@ -40,6 +41,49 @@
   <div class="text">#바카디</div>
 
 </div>
+
+<script>
+  function checkLogin() {
+    $.ajax({
+      url: '/login_complete',
+      type: 'POST',
+      success: function(response) {
+        if (response.flag === 0) {
+          console.log('마이 페이지로 이동');
+          window.location.href = '/mypage';
+
+        } else {
+          alert(response.message);
+          window.location.href = '/login';
+        }
+      },
+      error: function(xhr, status, error) {
+        alert('로그인 상태 확인 실패: ' + error);
+        window.location.href = '/login';
+      }
+    });
+  }
+
+  function checkLogin2() {
+    $.ajax({
+      url: '/login_complete',
+      type: 'POST',
+      success: function(response) {
+        if (response.flag === 0) {
+          alert('로그인되어 있습니다. 마이 페이지로 이동하세요');
+        } else {
+          alert(response.message);
+          window.location.href = '/login';
+        }
+      },
+      error: function(xhr, status, error) {
+        alert('로그인 상태 확인 실패: ' + error);
+        window.location.href = '/login';
+      }
+    });
+  }
+
+</script>
 
 </body>
 </html>
