--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -88,11 +88,11 @@
 </head>
 <body>
 <div class="navbar">
-  <a href="#">만 개의 칵테일</a>
+  <a href="/main">만 개의 칵테일</a>
   <div>
-    <a href="#">인기 칵테일</a>
-    <a href="#">추천 칵테일</a>
-    <a href="#">칵테일 검색</a>
+    <a href="/popular">인기 칵테일</a>
+    <a href="/recommend">추천 칵테일</a>
+    <a href="/search">칵테일 검색</a>
     <a href="#" onclick="checkLogin()" class="mypage-link">MyPage</a>
     <a href="#" class="login-link" onclick="checkLogin2()">로그인</a>
   </div>
@@ -100,7 +100,7 @@
 
 <div class="header">회원가입</div>
 
-<form id="signup-form" th:action="@{/api/register_ok}" method="POST" class="container">
+<form id="signup-form" th:action="@{/register_ok}" method="POST" class="container">
   <div class="sub-text">
     이름<br>
     <input type="text" name="name" placeholder="name" required><br><br>
@@ -127,7 +127,7 @@
     console.log(formData);
     // AJAX 요청
     $.ajax({
-      url: '/api/register_ok',  // 서버의 POST 요청 URL
+      url: '/register_ok',  // 서버의 POST 요청 URL
       type: 'POST',         // POST 요청
       data: formData,       // 폼 데이터
       processData: false,   // 폼 데이터 그대로 전송
@@ -136,15 +136,15 @@
         // 서버 응답 처리 (성공 시)
         if (response.flag === 0) {
           alert(response.message);
-          window.location.href = '/api/login';
+          window.location.href = '/login';
         } else {
           alert(response.message);
-          window.location.href = '/api/register';
+          window.location.href = '/register';
         }
       },
       error: function(xhr, status, error) {
         alert('회원가입 상태 확인 실패: ' + error);
-        window.location.href = '/api/register';
+        window.location.href = '/register';
       }
     });
   }
@@ -152,28 +152,28 @@
   // 로그인 상태를 확인하여 mypage로 이동하거나 login으로 리디렉션
   function checkLogin() {
     $.ajax({
-      url: '/api/login_complete',  // 로그인 상태 확인 API
+      url: '/login_complete',  // 로그인 상태 확인 API
       type: 'POST',
       success: function(response) {
         if (response.flag === 0) {
           // 세션이 있으면 mypage로 이동
-          window.location.href = '/api/mypage';
+          window.location.href = '/mypage';
 
         } else {
           alert(response.message); // "로그인해야 합니다."
-          window.location.href = '/api/login';  // 로그인 페이지로 이동
+          window.location.href = '/login';  // 로그인 페이지로 이동
         }
       },
       error: function(xhr, status, error) {
         alert('로그인 상태 확인 실패: ' + error);
-        window.location.href = '/api/login';  // 로그인 페이지로 리디렉션
+        window.location.href = '/login';  // 로그인 페이지로 리디렉션
       }
     });
   }
 
   function checkLogin2() {
     $.ajax({
-      url: '/api/login_complete',  // 로그인 상태 확인 API
+      url: '/login_complete',  // 로그인 상태 확인 API
       type: 'POST',
       success: function(response) {
         if (response.flag === 0) {
@@ -181,12 +181,12 @@
           alert('로그인되어 있습니다. 마이 페이지로 이동하세요');
         } else {
           alert(response.message);
-          window.location.href = '/api/login';  // 로그인 페이지로 이동
+          window.location.href = '/login';  // 로그인 페이지로 이동
         }
       },
       error: function(xhr, status, error) {
         alert('로그인 상태 확인 실패: ' + error);
-        window.location.href = '/api/login';
+        window.location.href = '/login';
       }
     });
   }
