--- a/src/main/resources/templates/user/search3.html
+++ b/src/main/resources/templates/user/search3.html
@@ -6,6 +6,7 @@
   <title th:text="'칵테일상세: ' + ${cocktailById.name}">Cocktail Details</title>
   <link rel="stylesheet" href="/css/search3.css">
   <script defer src="/js/search3.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
@@ -15,9 +16,8 @@
     <a href="/popular">인기 칵테일</a>
     <a href="/recommend">추천 칵테일</a>
     <a href="/search">칵테일 검색</a>
-    <a href="/api/login">
-      <img src="/images/line.png">
-    </a>
+    <a href="#" onclick="checkLogin()" class="mypage-link">MyPage</a>
+    <a href="#" class="login-link" onclick="checkLogin2()">로그인</a>
   </div>
 </div>
 
@@ -59,10 +59,10 @@
         <p id="cocktailAlcohol" th:text="${cocktailById.alcoholic}"></p>
       </div>
 
-      <div class="cocktail-hits">
-        <strong>조회수:</strong>
-        <p id="cocktailHits" th:text="${cocktailById.hits}+'회'"></p>
-      </div>
+<!--      <div class="cocktail-hits">-->
+<!--        <strong>조회수:</strong>-->
+<!--        <p id="cocktailHits" th:text="${cocktailById.hits}+'회'"></p>-->
+<!--      </div>-->
 
       <div class="cocktail-hits">
         <strong>좋아요:</strong>
@@ -92,6 +92,50 @@
 
   <ul class="comment-list" id="commentList"></ul>
 </div>
+
+<script>
+  function checkLogin() {
+    $.ajax({
+      url: '/login_complete',
+      type: 'POST',
+      success: function(response) {
+        if (response.flag === 0) {
+          console.log('마이 페이지로 이동');
+          window.location.href = '/mypage';
+
+
+        } else {
+          alert(response.message);
+          window.location.href = '/login';
+        }
+      },
+      error: function(xhr, status, error) {
+        alert('로그인 상태 확인 실패: ' + error);
+        window.location.href = '/login';
+      }
+    });
+  }
+
+  function checkLogin2() {
+    $.ajax({
+      url: '/login_complete',
+      type: 'POST',
+      success: function(response) {
+        if (response.flag === 0) {
+          alert('로그인되어 있습니다. 마이 페이지로 이동하세요');
+        } else {
+          alert(response.message);
+          window.location.href = '/login';
+        }
+      },
+      error: function(xhr, status, error) {
+        alert('로그인 상태 확인 실패: ' + error);
+        window.location.href = '/login';
+      }
+    });
+  }
+
+</script>
 
 </body>
 </html>
