fix: 칵테일 상세페이지에서 좋아요 누르면 새로고침되면서 조회수 증가하는 현상 해결
SearchController의 칵테일 좋아요 등록(Post), 삭제(Delete) 메서드에서 오퍼레이션 성공시 200상태코드와 함께 등록/삭제 이후 좋아요수를 반환하도록 수정

Search3.js에서 해당 좋아요수를 비동기식으로 받아서 동적으로 좋아요수를 수정하여 출력하도록 수정

--- a/src/main/resources/templates/user/search3.html
+++ b/src/main/resources/templates/user/search3.html
@@ -59,10 +59,10 @@
         <p id="cocktailAlcohol" th:text="${cocktailById.alcoholic}"></p>
       </div>
 
-<!--      <div class="cocktail-hits">-->
-<!--        <strong>조회수:</strong>-->
-<!--        <p id="cocktailHits" th:text="${cocktailById.hits}+'회'"></p>-->
-<!--      </div>-->
+      <div class="cocktail-hits">
+        <strong>조회수:</strong>
+        <p id="cocktailHits" th:text="${cocktailById.hits}+'회'"></p>
+      </div>
 
       <div class="cocktail-hits">
         <strong>좋아요:</strong>
