--- a/src/main/resources/templates/admin/comments.html
+++ b/src/main/resources/templates/admin/comments.html
@@ -223,19 +223,19 @@
         <nav aria-label="Page navigation" th:if="${totalPages > 1}">
             <ul class="pagination justify-content-center mt-3">
                 <li class="page-item" th:classappend="${page == 1} ? ' disabled'">
-                    <a class="page-link" th:href="@{/admin/comments(page=${page-1}, keyword=${param.keyword})}" aria-label="Previous">
+                    <a class="page-link" th:href="@{/admin/comments/search(page=${page-1}, keyword=${keyword})}" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
 
                 <li class="page-item" th:each="p : ${#numbers.sequence(1, totalPages)}"
                     th:classappend="${p == page} ? ' active'">
-                    <a class="page-link" th:href="@{/admin/comments(page=${p}, keyword=${param.keyword})}"
+                    <a class="page-link" th:href="@{/admin/comments/search(page=${p}, keyword=${keyword})}"
                        th:text="${p}">1</a>
                 </li>
 
                 <li class="page-item" th:classappend="${page == totalPages} ? ' disabled'">
-                    <a class="page-link" th:href="@{/admin/comments(page=${page+1}, keyword=${param.keyword})}" aria-label="Next">
+                    <a class="page-link" th:href="@{/admin/comments/search(page=${page+1}, keyword=${keyword})}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
